调整权限管理模块